examples/test/testpolicy19645.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19645
  namespace: namespace276
spec:
  podSelector:
    matchLabels:
      key29: value35
      key9: value47
      key1: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value27
      podSelector:
        matchLabels:
          key36: value14
          key49: value21
          key16: value12
